--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=http://localhost:8080/gerarToken
 
 smallrye.jwt.sign.key.location=privateKey.pem
+
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ordensof
+quarkus.datasource.username=superColaborador
+quarkus.datasource.password=senha123!
