--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     <groupId>org.acme</groupId>
     <artifactId>microservice-login-cadastro</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-
     <properties>
         <compiler-plugin.version>3.11.0</compiler-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
@@ -12,13 +11,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.2.0.Final</quarkus.platform.version>
+        <quarkus.platform.version>3.6.3</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0</surefire-plugin.version>
-        <jacoco.version>0.8.7</jacoco.version>
-        <mockito.version>4.11.0</mockito.version>
+        <jacoco.version>0.8.10</jacoco.version>
+        <mockito.version>5.5.0</mockito.version>
     </properties>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -30,15 +28,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest</artifactId>
+            <artifactId>quarkus-resteasy</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest-jackson</artifactId>
+            <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -110,7 +107,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
@@ -156,7 +152,7 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.9.2</version>
+                        <version>5.10.0</version>
                     </dependency>
                 </dependencies>
                 <configuration>
