--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ordensof
 quarkus.datasource.username=superColaborador
 quarkus.datasource.password=senha123!
+
+#Para evitar o erro de CORS
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=http://localhost:4200
+
+#troca de porta para não dar conflito com o Spring Boot
+quarkus.http.port=8081
